<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BibliStream</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connection">Connexion</string>
    <string name="email">Email</string>
    <string name="address_email">Mail</string>
    <string name="ligne">Ligne</string>
    <string name="password">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mon_compte">Mon compte</string>
    <string name="nouveaute">Nouveautés</string>
    <string name="categorie">Catégories</string>
    <string name="tout">Tous les films</string>

</resources>
