<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_login"
    android:baselineAligned="false"
    android:clickable="false"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- Layout acceuil -->
    <RelativeLayout
        android:id="@+id/linearLayout_acceuil"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            style="@style/FontButtonLogin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_connection"
            style="@style/FontButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"

            android:background="@drawable/style_button_login"
            android:text="@string/connection" />
    </RelativeLayout>

    <!-- Layout transparant blanc -->
    <LinearLayout
        android:id="@+id/linearLayout_fond_trans_login"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.6"
        android:background="@color/transp_fond_color"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="invisible">

    </LinearLayout>

    <!-- Layout du clic sur connecter -->
    <LinearLayout
        android:id="@+id/linearLayout_fond_trans_login_contenu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        android:visibility="invisible">
        <!-- titre -->
        <TextView
            style="@style/FontTextLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />
        <!-- editText customiser -->
        <app.cci.com.bliblistream.View.EditText.CustomEditText
            android:id="@+id/editTextLogin"
            android:name="app.cci.com.bliblistream.Model.Class.CustomEditText"
            style="@style/FontEditTextLogin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/address_email" />
        <!-- tiré -->
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="-12dp"
            android:background="#80808080"
            android:contentDescription="@string/ligne" />
        <!-- titre -->
        <TextView
            style="@style/FontTextLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password" />
        <!-- editText customiser -->
        <app.cci.com.bliblistream.View.EditText.CustomEditText
            android:id="@+id/ediTextPassword"
            android:name="app.cci.com.bliblistream.Model.Class.CustomEditText"
            style="@style/FontEditTextLogin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/password"

            />
        <!-- tiré -->
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="-12dp"
            android:background="#80808080"
            android:contentDescription="@string/ligne" />

        <Button
            android:id="@+id/button_se_connect"
            style="@style/FontButtonLogin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="50dp"
            android:background="@drawable/style_button_login"
            android:text="@string/se_connecter" />

        <TextView

            android:id="@+id/layout_login_mauvais_identifiant"
            style="@style/FontToast"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/style_toast"
            android:padding="15dp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_fond_trans_login_chargement"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.6"
        android:background="@color/transp_fond_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="invisible">
        <!-- titre -->
        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true" />
    </LinearLayout>

</RelativeLayout>