<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_accueil"
    android:weightSum="100"
    android:background="@android:color/white">

    <!-- nouveauté -->
    <LinearLayout
        android:layout_margin="5dp"
        android:id="@+id/S1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight = "30"

        android:background="@android:drawable/dialog_holo_dark_frame"

        >
        <RelativeLayout

            android:id="@+id/RelativeLayout_Film1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
           >
            <ImageView
                android:id="@+id/ImageView_Film1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/bg_load"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/Button_Acceuil_Nouveaute"
                android:background="@android:color/transparent"
                />
           <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="50dp"
               android:gravity="bottom"
               android:layout_gravity="bottom"
               android:layout_alignParentBottom="true"
               android:background="@drawable/style_bordure_ombre"
               android:alpha="0.4">
               <TextView
                   android:padding="10dp"
                   android:id="@+id/S4"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/nouveaute"
                   android:textColor="@android:color/black"
                   android:layout_alignParentBottom="true"
                   android:gravity="center"
                   android:textStyle="bold"

                   android:textSize="20sp" >
               </TextView>

               </RelativeLayout>

    </RelativeLayout>
    </LinearLayout>
    <!-- categore -->
    <LinearLayout
        android:id="@+id/S5"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight = "30"

        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout


            android:id="@+id/RelativeLayout_Film2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <ImageView
                android:id="@+id/ImageView_Film2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/bg_load"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/Button_Tout_Les_Films"
                android:background="@android:color/transparent"
                />
            <RelativeLayout
                android:background="@drawable/style_bordure_ombre"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:layout_alignParentBottom="true"

                android:alpha="0.4">
                <TextView

                    android:padding="10dp"
                    android:id="@+id/S6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tout"
                    android:textColor="@android:color/black"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:textStyle="bold"

                    android:textSize="20sp" >
                </TextView>

            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
    <!-- tout film -->
    <LinearLayout
        android:id="@+id/S52"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight = "30"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout


            android:id="@+id/RelativeLayout_Film3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <ImageView
                android:id="@+id/ImageView_Film3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/bg_load"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/Button_Acceuil_Categorie"
                android:background="@android:color/transparent"
                />
            <RelativeLayout
                android:background="@drawable/style_bordure_ombre"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:layout_alignParentBottom="true"
                android:alpha="0.4">
                <TextView
                    android:padding="10dp"
                    android:id="@+id/S62"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categorie"
                    android:textColor="@android:color/black"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp" >
                </TextView>

            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

    <!-- mon compte -->
    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/Button_Acceuil_MonCompte"
        android:text="@string/mon_compte"
        android:layout_weight = "10"
        android:background="@drawable/style_bordure_ombre"
        />
</LinearLayout>
